--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.3",
     "express-validator": "^6.8.1",
+    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
